# Global-Entry-Appointment-Scanner

./: .env  .gitignore  CLAUDE.md  GlobalEntryAppointmentScript.ipynb  README.md  appointment_scanner.py  demo.tape  main.py  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  codeql.yml  publish.yml  pylint.yml  pysa.yml
global_entry_scanner/: __init__.py  cli.py  config.py  mcp_server.py  models.py  scanner.py
global_entry_scanner/notifications/: __init__.py  base.py  console.py  discord.py  email.py  slack.py  sms.py
skills/global-entry-scanner/: SKILL.md
skills/global-entry-scanner/evals/: evals.json
tests/: conftest.py  test_cli.py  test_config.py  test_discord_slack_notifier.py  test_email_notifier.py  test_integration.py  test_models.py  test_scanner.py  test_sms_notifier.py
