[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "global-entry-scanner"
version = "0.1.7"
description = "Scan for Global Entry / NEXUS appointment slots and get notified"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["global-entry", "nexus", "trusted-traveler", "appointments", "notifications"]
dependencies = [
    "click>=8.0",
    "questionary>=2.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "cachetools>=5.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
sms = ["twilio>=8.0"]
mcp = ["mcp>=1.0"]
all = ["global-entry-scanner[sms,mcp]"]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-requests",
    "types-cachetools",
    "types-python-dateutil",
]

[project.scripts]
global-entry-scanner = "global_entry_scanner.cli:cli"

[project.urls]
Homepage = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner"
Issues = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "global_entry_scanner.config"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "global_entry_scanner.notifications.sms"
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["integration: marks tests that hit the live CBP API (deselect with '-m not integration')"]
