[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "global-entry-scanner"
version = "0.1.9"
description = "Scan for Global Entry / NEXUS appointment slots and get notified"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jaimin Brahmbhatt", email = "2418702+JaiminBrahmbhatt@users.noreply.github.com" }]
keywords = ["global-entry", "nexus", "trusted-traveler", "appointments", "notifications"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "questionary>=2.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "cachetools>=5.0",
    "tomli>=2.0; python_version < '3.11'",
    "twilio>=8.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-requests",
    "types-cachetools",
    "types-python-dateutil",
]

[project.scripts]
global-entry-scanner = "global_entry_scanner.cli:cli"

[project.urls]
Homepage = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner"
Documentation = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner/wiki"
Source = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner"
Issues = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner/issues"
Changelog = "https://github.com/JaiminBrahmbhatt/Global-Entry-Appointment-Scanner/releases"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "global_entry_scanner.config"
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["integration: marks tests that hit the live CBP API (deselect with '-m not integration')"]
